+ get plant by id
